Refactored; Tests OK

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p id="description">A treemap diagram that visualizes data as nested rectangles.</p>
     <div id="container"></div>
     <div id="legend"></div>
-    <div id="tooltip"></div>
+    <div id="tooltip" style="opacity: 0;"></div>
 
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
